--- a/recipes/IEMOCAP/emotion_recognition/hparams/train_with_wav2vec2.yaml
+++ b/recipes/IEMOCAP/emotion_recognition/hparams/train_with_wav2vec2.yaml
@@ -9,9 +9,9 @@ seed: 1993
 __set_seed: !apply:torch.manual_seed [!ref <seed>]
 
 # Dataset will be downloaded to the `data_original`
-data_original: !PLACEHOLDER  # e.g., /workspace/data/IEMOCAP/IEMOCAP_full_release/Session
+data_original: /data2/home/dataset/iemocap/IEMOCAP_full_release/Session
 # Data prepare function will create a modified dataset with structured data
-data_folder: !PLACEHOLDER # e.g, /workspace/data/IEMOCAP/IEMOCAP_ahsn_leave-two-speaker-out
+data_folder: /data2/home/dataset/iemocap/IEMOCAP_ahsn_leave-two-speaker-out
 output_folder: !ref results/wav2vec2_base_fold1/<seed>
 save_folder: !ref <output_folder>/save
 train_log: !ref <output_folder>/train_log.txt
@@ -38,7 +38,7 @@ ckpt_interval_minutes: 15 # save checkpoint every N min
 
 # Training parameters
 number_of_epochs: 30
-batch_size: 4
+batch_size: 1
 lr: 0.0001
 lr_wav2vec2: 0.00001
 
